# blackjack

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.claude/agents/: architect.md  auditor.md  backend-developer.md  code-reviewer.md  database-developer.md  dependency-manager.md  devops-engineer.md  frontend-developer.md  infrastructure-developer.md  mobile-developer.md  project-manager.md  qa-tester.md  release-manager.md  security-analyst.md  strategic-advisor.md  tech-lead.md  technical-writer.md  test-engineer.md  ux-designer.md
.claude/learnings/: general.md
.claude/learnings/by-domain/: testing.md
.claude/learnings/by-language/: cpp.md  css.md  javascript.md
.claude/learnings/by-tool/: emscripten.md  git.md
.claude/skills/architect/: SKILL.md
.claude/skills/auditor/: SKILL.md
.claude/skills/backend-developer/: SKILL.md
.claude/skills/code-reviewer/: SKILL.md
.claude/skills/continuous-learning/: SKILL.md
.claude/skills/database-developer/: SKILL.md
.claude/skills/dependency-manager/: SKILL.md
.claude/skills/devops-engineer/: SKILL.md
.claude/skills/frontend-developer/: SKILL.md
.claude/skills/infrastructure-developer/: SKILL.md
.claude/skills/mobile-developer/: SKILL.md
.claude/skills/project-manager/: SKILL.md
.claude/skills/qa-tester/: SKILL.md
.claude/skills/release-manager/: SKILL.md
.claude/skills/review-knowledge/: SKILL.md
.claude/skills/security-analyst/: SKILL.md
.claude/skills/strategic-advisor/: SKILL.md
.claude/skills/tech-lead/: SKILL.md
.claude/skills/technical-writer/: SKILL.md
.claude/skills/test-engineer/: SKILL.md
.claude/skills/ux-designer/: SKILL.md
.dev-team/: CLAUDE.md  api-contracts.md  architecture-phase2.md  architecture.md  coding-standards.md  data-model.md  git-workflow.md  project-plan.md  technical-risks.md  ui-design.md
.dev-team/issues/: TEMPLATE.md  issue-001-suit-symbols-garbled.md  issue-002-split-skips-to-results.md  issue-003-tui-no-new-game.md  issue-004-tui-quit-undiscoverable.md  issue-005-no-c-style-casts.md  issue-006-use-ranges-algorithms.md
.dev-team/reviews/: design-review-devops-engineer.md  design-review-security-analyst.md
.dev-team/specifications/: spec-001-blackjack-engine.md  spec-002-cli-frontend.md  spec-003-ftxui-frontend.md
.dev-team/ux/: blackjack-web-app.md
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: deploy.yml
apps/cli/: CMakeLists.txt
apps/ftxui/: CMakeLists.txt
apps/web/: CLAUDE.md  CMakeLists.txt
apps/web/app/: style.css
blackjack/: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  README.md  deck.hpp  types.cpp
blackjack/.githooks/: pre-commit
blackjack/cli/: CMakeLists.txt
blackjack/cli/src/: main.cpp
blackjack/electron/: package.json
blackjack/ftxui/src/: main.cpp
blackjack/lib/: CMakeLists.txt
blackjack/lib/include/blackjack/: deck.hpp  types.hpp
blackjack/lib/src/: deck.cpp  game.cpp  hand.cpp  types.cpp
blackjack/tests/: CMakeLists.txt
blackjack/tests/src/: test_card.cpp  test_deck.cpp  test_game.cpp
blackjack/web/: CLAUDE.md
blackjack/web/app/src/: ui-renderer.js
blackjack/web/tests/: layout.test.js
cli/: CMakeLists.txt
cli/src/: main.cpp
docs/: phase-0-workflow.md  phase-1-artifact-standards.md
docs/templates/: api-contract.md  architecture.md  audit-report.md  code-review.md  coding-standards.md  data-model.md  defect-report.md  dependency-audit.md  design-review.md  feature-spec.md  git-workflow.md  project-plan.md  release-notes.md  security-review.md  technical-risks.md  test-strategy.md  ux-spec.md  vision-statement.md
ftxui/: CMakeLists.txt
ftxui/src/: main.cpp
lib/: CMakeLists.txt
lib/include/blackjack/: deck.hpp  game.hpp  hand.hpp  types.hpp
lib/src/: deck.cpp  game.cpp  hand.cpp  types.cpp
projects/blackjack/: .clang-tidy  .git-blame-ignore-revs  .gitignore  CLAUDE.md  CMakeLists.txt  README.md
projects/blackjack/.dev-team/: architecture-phase2.md  strategic-advisor-challenge.md  vision-statement.md
projects/blackjack/.dev-team/issues/: issue-001-suit-symbols-garbled.md  issue-002-split-skips-to-results.md  issue-003-tui-no-new-game.md  issue-004-tui-quit-undiscoverable.md  issue-006-use-ranges-algorithms.md
projects/blackjack/.dev-team/reviews/: blocker-resolution-log.md  design-review-dependency-manager.md  design-review-test-engineer.md  design-review-ux-designer.md
projects/blackjack/docs/: frontends.md
projects/blackjack/electron/: main.js  package-lock.json
projects/blackjack/ftxui/: CMakeLists.txt
projects/blackjack/lib/include/blackjack/: game.hpp  hand.hpp
projects/blackjack/lib/src/: hand.cpp
projects/blackjack/tests/src/: test_deck.cpp  test_game.cpp
projects/blackjack/web/: .gitignore  CMakeLists.txt  package-lock.json  package.json
projects/blackjack/web/app/: index.html
projects/blackjack/web/app/src/: card-renderer.js  main.js
tests/: CMakeLists.txt
tests/src/: test_card.cpp  test_hand.cpp
web/: BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  style.css
web/app/: index.html  style.css
web/app/src/: card-renderer.js  game-controller.js  ui-renderer.js
web/src/: bindings.cpp  game-controller.js  main.js
web/tests/: layout.test.js
worklog/: 2026-01-30-timeline.md  2026-01-31-timeline.md
